# pqg

./: .gitignore  .pre-commit-config.yaml  PR4_TEST_RESULTS.md  PR5_UPDATE_NEEDED.md  PR6_ACTION_PLAN.md  README.md  SESSION_SUMMARY.md  pyproject.toml  sesarTest.parquet
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
docs/: FLAVOR_B_CONCEPT_INDEX_DESIGN.md  PQG_SPECIFICATION.md  cli-reference.md  conformance_matrix.md  getting-started.md  pqg_demo.html  typed-edges.md  user-guide.md
docs/tutorials/: 01-basic-usage.md  02-complex-objects.md  03-querying.md  04-visualization.md
examples/: typed_edges_demo.py
examples/minimal/: README.md
examples/minimal/csv/: agents.csv  edges.csv  events.csv  locations.csv  samples.csv  sites.csv
examples/minimal/json/: 1_sample.json  3_samples.json
examples/minimal/parquet/: minimal_export.parquet  minimal_narrow.parquet  minimal_wide.parquet
experiments/facet_optimization/: TASK_SPEC.md
experiments/facet_optimization/results/: facet_results.json
experiments/h3_optimization/: TASK_SPEC.md
experiments/h3_optimization/results/: benchmark_results.json
isamples/: ClaudeSesar2iSample.py  README.md  __init__.py  fake_samples.py  load_insert_lists.py  sesar_samples.py
notes/: create_view.ipynb  dataclass_pqg.ipynb  pqgtesting.ipynb  property_sort_order.md  query_multivalued.ipynb  random_samples.py
pqg/: __init__.py  __main__.py  common.py  edge_types.py  pqg_separatetable.py  pqg_singletable.py  sql_converter.py  typed_edges.py
pqg/schemas/: __init__.py  base.py  export.py  narrow.py  sql_columns.py  wide.py
scripts/: analyze_edge_types.py  sql_convert_isamples.py
tests/: test_common.py  test_format_equivalence.py  test_schemas.py  test_typed_edges.py  test_types.py
