[tool.poetry]
name = "pqg"
version = "0.1.0"
description = "Exploring property graph representation in DuckDB"
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
duckdb = "^1.1.1"
graphviz = "^0.20.3"
rdflib = "^7.0.0"
pyvis = "^0.3.2"
networkx = "^3.4.2"
mashumaro = "^3.14"
pytz = "^2024.2"
jsonasobj2 = "^1.0.4"
linkml-runtime = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
faker = "^33.1.0"
flameprof = "^0.4"
iplantuml = "^0.1.1"
plantweb = "^1.3.0"

[tool.poetry_bumpversion.file."porkage/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
