[project]
name = "pqg"
version = "0.1.0"
description = "Exploring property graph representation in DuckDB"
authors = [{ name = "datadave", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.1",
    "graphviz>=0.20.3",
    "jsonasobj2>=1.0.4",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "linkml-runtime>=1.8.3",
    "mashumaro>=3.14",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "plotly>=5.24.1",
    "pytz>=2024.2",
    "pyvis>=0.3.2",
    "rdflib>=7.0.0",
]

[project.scripts]
pqg = 'pqg.__main__:cli'

[dependency-groups]
dev = [
    "faker>=33.1.0",
    "flameprof>=0.4",
    "iplantuml>=0.1.1",
    "plantweb>=1.3.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
